--- a/.github/workflows/deploy_worker.yml
+++ b/.github/workflows/deploy_worker.yml
@@ -5,10 +5,9 @@ on:
         description: 'trigger workflow'
   push:
     branches:
-    - main
-    - release/*
-      
-  
+      - main
+      - release/*
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,4 +18,4 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          workingDirectory: './packages/api"
+          workingDirectory: './packages/api'
