--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,10 +6,12 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
+    "build": "yarn build:css && remix build",
+    "build:css": "sass styles:app/styles",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev": "remix build && run-p \"dev:*\"",
+    "dev:sass": "sass --watch styles:app/styles",
+    "dev": "run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler",
     "lint": "eslint",
     "test": "eslint && jest --verbose"
@@ -31,6 +33,7 @@
     "eslint": "^8.27.0",
     "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.56.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4",
     "wrangler": "^2.2.1"
