update web application

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,10 +7,10 @@
   "type": "module",
   "scripts": {
     "build": "yarn build:css && remix build",
-    "build:css": "sass styles:app/styles",
+    "build:css": "sass app/styles/scss:app/styles/css",
     "dev:remix": "remix watch",
     "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public",
-    "dev:sass": "sass --watch styles:app/styles",
+    "dev:sass": "sass --watch app/styles/scss:app/styles/css",
     "dev": "run-p \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run dev:wrangler",
     "lint": "eslint",
