--- a/packages/web/.gitignore
+++ b/packages/web/.gitignore
@@ -1,7 +1,8 @@
 node_modules
 
 /.cache
-/app/styles/css
+/app/styles/css/*
+!/app/styles/css/.gitkeep
 /functions/\[\[path\]\].js
 /functions/\[\[path\]\].js.map
 /public/build
